samples/_failures_safe/1761609972_5609a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f0a2a92.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_6f0a2a92.c:145:42: error: missing terminating " character
  145 |         "IDLE", "READING", "PROCESSING", "
      |                                          ^
./samples/SAFE/__tmp_6f0a2a92.c:145:9: error: expected expression at end of input
  145 |         "IDLE", "READING", "PROCESSING", "
      |         ^~~~~~
./samples/SAFE/__tmp_6f0a2a92.c:145:9: error: expected declaration or statement at end of input
